<resources>
    <string name="scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="FACEBOOK_APP_ID">2487787538103161</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">0d5ad7882f7e9ea967a85927c70edc9a</string>

    <string name="app_name">লন্ডি অ্যাপ</string>
    <string name="service_name_text">শার্ট</string>
    <string name="iron_price_text">আয়রন</string>
    <string name="wash_price_text">ওয়াশ</string>
    <string name="unit_text">পিস</string>
    <string name="price_text">মূল্য</string>
    <string name="duration_text">মেয়াদ</string>
    <string name="tk_sign">\u09F3</string>
    <string name="home_text">হোম</string>
    <string name="package_text">প্যাকেজ</string>
    <string name="offer_quantity_text">৩০\u09F3 \nছাড়!</string>
    <string name="offer_text">ছাড়</string>
    <string name="discount_text">\u0025 \nছাড়</string>
    <string name="call_support_text">কলঃ ০১৭৭৭৮৮৮৬৬১</string>
    <string name="quantity_text">পরিমাণ</string>
    <string name="add_to_cart">কার্টে যোগ করুন</string>
    <string name="app_desc">লন্ডি অ্যাপ আপনাকে দিচ্ছে হোম সার্ভিস কালেকশন এবং ডেলিভারী সুবিধা।</string>
    <string name="total_text">সর্বমোট</string>
    <string name="cart_text">কার্ট</string>
    <string name="collection_address_hint">সংগ্রহ ঠিকানা</string>
    <string name="delivery_address_hint">সরবরাহের ঠিকানা</string>
    <string name="collection_date_text">সংগ্রহের তারিখ</string>
    <string name="collection_time_text">সংগ্রহের সময়</string>
    <string name="delivery_date_text">সরবরাহের তারিখ</string>
    <string name="delivery_time_text">সরবরাহের সময়</string>
    <string name="collection_text">সংগ্রহ </string>
    <string name="delivery_text">সরবরাহ </string>
    <string name="house_text">বাসা/গ্রাম</string>
    <string name="road_text">রোড</string>
    <string name="sector_text">ব্লক/সেক্টর</string>
    <string name="than_text">থানা</string>
    <string name="upazila_text">উপজেলা</string>
    <string name="district_text">জেলা</string>
    <string name="delivery_note_hint">ডেলিভারি নোট</string>
    <string name="your_items_text">আপনার আইটেম সমূহ</string>
    <string name="add_item">আইটেম যোগ করুন</string>
    <string name="request_for_pickup_text">পিকআপের জন্য অনুরোধ করুন</string>
    <string name="next_text">সামনে যান</string>
    <string name="profile_text">প্রোফাইল</string>
    <string name="enter_mobile_no_text">আপনার মোবাইল নম্বর লিখুন</string>
    <string name="sign_in_hint_text">আপনার একাউন্টটি ভেরিফিকেশনের জন্য আপনার ব্যবহৃত সঠিক মোবাইল নাম্বারটি দিয়ে, <font color='red'>সামনে যান </font> বাটনে ক্লিক করুন</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="mobile_hint">Mobile</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="dob_text">Date of Birth</string>
    <string name="update_btn">Update</string>
    <string name="user_information">User Information</string>
    <string name="error_home_required">বাসা/গ্রামের নাম দিন</string>
    <string name="error_road_required">রোড নং দিন</string>
    <string name="error_sector_required">সেক্টর/মহল্লা দিন</string>
    <string name="error_thana_required">থানার নাম দিন</string>
    <string name="error_upazila_required">উপজেলা দিন</string>
    <string name="error_district_required">জেলা দিন</string>
    <string name="error_collection_date_required">সংগ্রহের তারিখ নির্ধারন করুন</string>
    <string name="error_collection_time_required">সংগ্রহের সময় নির্ধারন করুন</string>
    <string name="error_delivery_date_required">সরবরাহের তারিখ নির্ধারন করুন</string>
    <string name="error_delivery_time_required">সরবরাহের সময় নির্ধারন করুন</string>
    <string name="payment_method_text">মূল্যপরিশোধ পদ্ধতি</string>
    <string name="cash_on_delivery_text">ক্যাশ অন ডেলিভারি</string>
    <string name="confirm_order_text">অর্ডার কনফার্ম করুন</string>
    <string name="same_as_collection_address_text">সংগ্রহ ঠিকানা ও সরবরাহের ঠিকানা একই</string>
    <string name="no_items_text">কার্টে কোন আইটেম নেই</string>
    <string name="personal_information">ব্যক্তিগত তথ্য</string>
    <string name="email_text">ই-মেইল</string>
    <string name="birthday_text">জন্ম তারিখ</string>
    <string name="order_information">আপনার অর্ডার সমূহ</string>
    <string name="order_text">অর্ডার #</string>
    <string name="service_order_text">সার্ভিস অর্ডার</string>
    <string name="package_order_text">প্যাকেজ অর্ডার</string>
    <string name="edit_text">সম্পাদন করা</string>
    <string name="month_text">মাস</string>
    <string name="address_text">ঠিকানাঃ</string>
    <string name="date_text">সময়ঃ</string>
    <string name="time_text">তারিখঃ</string>
    <string name="delivery_status_text">ডেলিভারি স্টেটাস</string>
    <string name="payment_status_text">পেমেন্ট স্টেটাস</string>
    <string name="no_order_text">কোন অর্ডার করা হয়নি</string>
    <string name="item_remaining_text">আইটেম বাকি</string>
    <string name="day_remaining_text">দিন বাকি</string>
    <string name="package_start_date">প্যাকেজ শুরুর তারিখ</string>
    <string name="package_end_date">প্যাকেজ শেষের তারিখ</string>
    <string name="login_info">লগইন করুন</string>
    <string name="login_text">লগইন</string>
    <string name="subscribe_package">প্যাকেজ সাবস্ক্রাইব করুন</string>

    <string name="hot_deal_text">হট ডিল</string>
    <string name="more_text">আরো কিনুন</string>
    <string name="current_offer">অফার চলছে</string>
    <string name="upcoming_offer">আসন্ন অফার</string>
    <string name="recommended">আপনার জন্য</string>
</resources>
