<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SingleOrderDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

               <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:layout_collapseMode="parallax">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/order_id_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/order_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/order_date_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/order_text"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/delivery_status_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/delivery_status_text"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/total_amount_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="2dp"
                    android:text="@string/total_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:drawableLeft="@drawable/ic_check"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/collection_text"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/collection_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/collection_address_hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/collection_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/collection_date_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/collection_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/collection_time_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:drawableLeft="@drawable/ic_check"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/delivery_text"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/delivery_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/collection_address_hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/delivery_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/delivery_date_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/delivery_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/delivery_time_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:drawableLeft="@drawable/ic_check"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/delivery_note_hint"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/delivery_note_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/delivery_note_hint"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:drawableLeft="@drawable/ic_check"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/payment_method_text"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/payment_method_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/payment_method_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:drawableLeft="@drawable/ic_check"
                android:drawablePadding="5dp"
                android:padding="2dp"
                android:text="@string/payment_status_text"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/payment_status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/payment_status_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/your_items_text"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="20dp"
                android:id="@+id/item_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:reverseLayout="false"
                tools:listitem="@layout/row_order_item" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>