<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="0dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/service_image_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/service_name_text"
            android:src="@drawable/shirt" />

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/gradient_background" />

        <TextView
            android:id="@+id/discount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/service_image_view"
            android:layout_alignRight="@id/service_image_view"
            android:layout_margin="5dp"
            android:background="@drawable/offer_bg"
            android:gravity="center"
            android:text="@string/offer_quantity_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/service_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/service_image_view"
            android:padding="5dp"
            android:text="@string/service_name_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/normalTextColor"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/regular_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/price_text_view"
            android:layout_alignEnd="@id/service_image_view"
            android:layout_alignRight="@id/service_image_view"
            android:background="@drawable/line_drawable"
            android:padding="2dp"
            android:text="@string/iron_price_text"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/service_image_view"
            android:layout_alignRight="@id/service_image_view"
            android:layout_alignBottom="@id/service_image_view"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_background"
            android:padding="2dp"
            android:text="@string/wash_price_text"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>